[gd_scene load_steps=9 format=3 uid="uid://boax5akboulbg"]

[ext_resource type="Script" path="res://game/ui/admin/admin_panel.gd" id="1_oedsy"]
[ext_resource type="Script" path="res://game/ui/admin/admin_state_machine.gd" id="2_n06x5"]
[ext_resource type="Script" path="res://game/ui/admin/water_row_state.gd" id="3_q0dwu"]
[ext_resource type="Resource" uid="uid://d4hbmp48eqem4" path="res://game/blocks/water blocks/water_block.tres" id="4_slikf"]
[ext_resource type="Script" path="res://game/ui/admin/spawn_scene.gd" id="5_pj31t"]
[ext_resource type="PackedScene" uid="uid://dhm7k4rl1tsa7" path="res://game/vehicles/rocket/rocket.tscn" id="6_wfd7e"]
[ext_resource type="Script" path="res://game/ui/admin/spawn_mob.gd" id="7_ueemw"]
[ext_resource type="Resource" uid="uid://dqthv8ifl1hw0" path="res://game/mobs/fish/fish.tres" id="8_lxgvb"]

[node name="Admin Panel" type="CanvasLayer"]
visible = false
script = ExtResource("1_oedsy")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Admin"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Water Row Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Water Row"

[node name="Spawn Scene Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spawn Scene"

[node name="Spawn Mob Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spawn Mob"

[node name="State Machine" type="Node" parent="."]
script = ExtResource("2_n06x5")
allow_no_state = true

[node name="Water Row" type="Node" parent="State Machine"]
script = ExtResource("3_q0dwu")
water_block = ExtResource("4_slikf")

[node name="Spawn Scene" type="Node" parent="State Machine"]
script = ExtResource("5_pj31t")
scene = ExtResource("6_wfd7e")

[node name="Spawn Mob" type="Node" parent="State Machine"]
script = ExtResource("7_ueemw")
definition = ExtResource("8_lxgvb")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Water Row Button" to="State Machine" method="_on_water_row_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Spawn Scene Button" to="State Machine" method="_on_spawn_scene_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Spawn Mob Button" to="State Machine" method="_on_spawn_mob_button_pressed"]
